--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Резюме Ларькова Николая Алексеевича</title>
+	<link rel="stylesheet" href="style/index.min.css">
 </head>
 <body>
-	
+	<header></header>
+	<main></main>
+	<footer></footer>
 </body>
 </html>
